# dash-wrap

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: lint.yml  test.yml
0.0.1/: objects.inv
0.0.2/: sitemap.xml
docs/: index.md
latest/: 404.html  index.html
main/: 404.html  index.html  sitemap.xml
main/search/: search_index.json
src/dash_wrap/: __init__.py  _defaults.py  _factory.py  _wrap.py  _wrapper.py
tests/dash_wrap/: conftest.py  test_broad_coverage.py  test_callbacks.py  test_dash_internals.py  test_dependency_equivalence.py  test_factory.py  test_serialization.py  test_subclassing.py  test_typing.py  test_wrap_factory.py  test_wrapper.py
